@@ -15,6 +15,7 @@ Verilator 4.219 devel
 
 * Removed the deprecated lint_off flag -msg; use -rule instead.
 * Removed the deprecated "fl" attribute in XML output; use "loc" attribute instead.
+* Suppress WIDTH warning on negate using carry bit (#2395). [Peter Monsson]
 * Fix skipping public enum values with four-state values (#3303).
 
 
